Rename from tehpotatoking.com to nitelite.io

--- a/templates/layouts/blog-default.jade
+++ b/templates/layouts/blog-default.jade
@@ -49,7 +49,7 @@ html(class='no-js')
           // About Me
           div.side
             div.about-me.clearfix
-              img(src='http://www.gravatar.com/avatar/493f071079d7dc98b11789d18e1c0799.png', title='tehpotatoking\'s avatar', alt='tehpotatoking\'s avatar', class='profile')
+              img(src='http://www.gravatar.com/avatar/493f071079d7dc98b11789d18e1c0799.png', title='niteLite\'s avatar', alt='niteLite\'s avatar', class='profile')
               include ../includes/about
 
             div.social-links.clearfix
@@ -58,7 +58,7 @@ html(class='no-js')
                   img(src='/img/youtube-icon.png', alt='youtube icon').social-icon
               div.facebook
                 img(src='/img/facebook-icon.png', alt='facebook icon').social-icon
-              a(href='https://twitter.com/tehPotatoKing')
+              a(href='https://twitter.com/byronsanchez')
                 div.twitter
                   img(src='/img/twitter-icon.png', alt='twitter icon').social-icon
               a(href='https://plus.google.com/u/0/b/113250549473453821044/113250549473453821044')
