--- a/templates/includes/about.jade
+++ b/templates/includes/about.jade
@@ -1,3 +1,3 @@
 h3 #{ locals.author }
 div.about-description
-  | Hi, I'm tehPotatoKing! This is a journal about my adventures.
+  | Hi, I'm nitelite! This is a journal about my adventures.
