--- a/templates/includes/footer.jade
+++ b/templates/includes/footer.jade
@@ -1,8 +1,8 @@
 div.footer-block.footer
-  p.license Copyright &copy; #{ new Date().getFullYear() } tehPotatoKing.com. All Rights Reserved.
+  p.license Copyright &copy; #{ new Date().getFullYear() } niteLite.io. All Rights Reserved.
   p.license Code Snippets licensed under the MIT License.
   p.license Developed by&nbsp;
-    a(href='http://tehpotatoking.com') tehPotatoKing
+    a(href='https://niteLite.io') niteLite
   p
   p.license
     a(href='/privacy/') Privacy Policy
