--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -35,7 +35,7 @@ head
     link(rel='stylesheet', href='/css/print.css', media='print', 
     type='text/css')
 
-    link(rel='alternate', href='http://feeds.tehpotatoking.com/tehpotatoking/', type='application/rss+xml', title=description)
+    link(rel='alternate', href='http://feeds.nitelite.io/nitelite/', type='application/rss+xml', title=description)
 
     // Fonts
     // Code
