--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -35,17 +35,17 @@ head
     link(rel='stylesheet', href='/css/print.css', media='print', 
     type='text/css')
 
-    link(rel='alternate', href='http://feeds.nitelite.io/nitelite/', type='application/rss+xml', title=description)
+    link(rel='alternate', href='https://feeds.nitelite.io/nitelite/', type='application/rss+xml', title=description)
 
     // Fonts
     // Code
-    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400')
+    link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400')
     // Headings
-    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Dosis:400,700')
+    link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Dosis:400,700')
     // TODO: Title
     // link(rel='stylesheet', type='text/css', href='')
     // Text
-    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Alegreya:400,400italic,700,700italic')
+    link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Alegreya:400,400italic,700,700italic')
 
     // Favicons
     link(rel='shortcut icon', href='/favicon.ico')
