Switch from tpk to nl

--- a/templates/layouts/blog-default.jade
+++ b/templates/layouts/blog-default.jade
@@ -26,7 +26,7 @@ html(class='no-js')
               div.logo-text
                 h1
                   a(href='/', class='brand')
-                    span.tpk tpk
+                    span.tpk nL
 
       // TODO: Draw a cartoon image and put it here as bg with stars too
       div.background-image
