--- a/templates/layouts/article.jade
+++ b/templates/layouts/article.jade
@@ -114,8 +114,8 @@ block content
 
       script.
         var disqus_config = function () {
-          this.page.url = #{page.url} ;  // Replace PAGE_URL with your page's canonical URL variable
-          this.page.identifier = #{page.url}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          this.page.url = "https://nitelite.io#{page.url}" ;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = "https://nitelite.io#{page.url}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
 
         (function() { // DON'T EDIT BELOW THIS LINE
