--- a/templates/includes/scripts.jade
+++ b/templates/includes/scripts.jade
@@ -16,6 +16,8 @@ script(src="//cdn.jsdelivr.net/foundation/5.1.0/js/foundation.min.js")
 script(type='text/javascript').
   window.Foundation || document.write(unescape("%3Cscript src='/js/foundation.min.js' type='text/javascript'%3E%3C/script%3E"))
 
+script(id="dsq-count-scr" src="//nitelite.disqus.com/count.js" async)
+
 // Plugins and custom javascript
 script(src='/js/libs.js')
 
