Remove ruby as a dependency
- Remove compass and the ruby version of sass to get rid of ruby as a 
  dependency. Main reason is I want to consolidate the app to as few 
  dependencies as possible so that it's easier to maintain and works with 
  Windows.
- Add creepypasta to list of tags for index generation.
- Add a grunt task for rebuilding the native bindings so I can switch between 
  workstations easily.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
+
+// NOTE: mixin clearfix is provided by foundation
+
 @import "variables";
 @import "settings";
-@import "compass/css3";
-@import "compass/utilities/general/clearfix";
 @import "../bower_components/foundation/scss/normalize";
 @import "../bower_components/foundation-icons/foundation_icons_general/sass/general_foundicons";
 @import "../bower_components/foundation/scss/foundation";
