--- a/templates/includes/footer.jade
+++ b/templates/includes/footer.jade
@@ -2,7 +2,7 @@ div.footer-block.footer
   p.license Copyright &copy; #{ new Date().getFullYear() } niteLite.io. All Rights Reserved.
   p.license Code Snippets licensed under the MIT License.
   p.license Developed by&nbsp;
-    a(href='https://niteLite.io') niteLite
+    a(href='#{locals.url}') niteLite
   p
   p.license
     a(href='/privacy/') Privacy Policy
