Update foundation so that libsass compiles everything properly

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -935,7 +935,7 @@ $topbar-bg-color: $navbar-background-color;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 66px;
+$topbar-height: 4.125rem;
 $topbar-margin-bottom: 0;
 
 // Control Input height for top bar
