Update about and social media links

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -497,6 +497,14 @@ h3.legend {
   padding: 1.15rem 0 1.0rem;
 }
 
+.social-links .soundcloud {
+  height: 3.375rem;
+  background: $social-badge-4-color;
+  float: left;
+  color: $hero-text-color;
+  padding: 1.15rem 0 1.0rem;
+}
+
 .social-icon {
   border: 0;
   padding-right: 0.25rem;
