--- a/sass/_small-up.scss
+++ b/sass/_small-up.scss
@@ -43,6 +43,10 @@
   width: 25%;
 }
 
+.social-links .soundcloud {
+  width: 25%;
+}
+
 .side .rating-five .rating-icon {
   width: 15.172413793%;
   max-width: 40px;
