--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -38,6 +38,7 @@ $social-badge-0-color: $footer-background-color;
 $social-badge-1-color: #3193D5;
 $social-badge-2-color: #277BB3;
 $social-badge-3-color: #BB372B;
+$social-badge-4-color: #FF7700;
 
 $search-button-background-color: $hero-background-color;
 $primary-submit-button-color: $hero-background-color;
