Remove subcategories from archives

--- a/templates/layouts/archives.jade
+++ b/templates/layouts/archives.jade
@@ -43,7 +43,7 @@ block content
 
             - years = notebooks[notebooksK[notebook]]
 
-            h4.notebook-label()=notebooksK[notebook]
+            // h4.notebook-label()=notebooksK[notebook]
 
             ul
               - var yearsK = _.chain(years).keys().reverse().value()
