--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -23,6 +23,7 @@ $sidebar-background-color: #F6F9F9;
 $journal-box-1-color: #51CF87;
 $journal-box-2-color: #D5CB2C;
 $journal-box-3-color: #F4D353;
+$mailing-list-box-color: #c74438;
 $popular-box-color: #c74438;
 $rating-box-color: #8d50a3;
 $skill-box-color: $navbar-active-color;
