--- a/templates/layouts/blog-default.jade
+++ b/templates/layouts/blog-default.jade
@@ -66,6 +66,11 @@ html(class='no-js')
                 div.facebook
                   img(src='/img/facebook-icon.png', alt='facebook icon').social-icon
 
+          // Email List
+          div.side
+            div.mailing-list.clearfix
+              include ../includes/mailing-list
+
           if most_popular_articles
             div.side
               div.most-popular
