--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -585,7 +585,7 @@ h3.side-label {
 }
 
 #mc_embed_signup form {
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
 }
 
 #mc_embed_signup .mc-field-group {
