--- a/nitelite.io-web/templates/includes/scripts.jade
+++ b/nitelite.io-web/templates/includes/scripts.jade
@@ -1,25 +1,26 @@
 // jQuery CDN and fallback
-script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
+//script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
 
-script(type='text/javascript').
-  window.jQuery || document.write(unescape("%3Cscript src='/js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"))
+//script(type='text/javascript').
+//  window.jQuery || document.write(unescape("%3Cscript src='/js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"))
 
 // FastClick CDN and fallback
-script(src="//cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.10/fastclick.min.js")
-
-script(type='text/javascript').
-  window.FastClick || document.write(unescape("%3Cscript src='/js/fastclick.min.js' type='text/javascript'%3E%3C/script%3E"))
+//script(src="//cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.10/fastclick.min.js")
+//
+//script(type='text/javascript').
+//  window.FastClick || document.write(unescape("%3Cscript src='/js/fastclick.min.js' type='text/javascript'%3E%3C/script%3E"))
 
 // Foundation CDN and fallback
-script(src="//cdn.jsdelivr.net/foundation/5.1.0/js/foundation.min.js")
-
-script(type='text/javascript').
-  window.Foundation || document.write(unescape("%3Cscript src='/js/foundation.min.js' type='text/javascript'%3E%3C/script%3E"))
+//script(src="//cdn.jsdelivr.net/foundation/5.1.0/js/foundation.min.js")
+//
+//script(type='text/javascript').
+//  window.Foundation || document.write(unescape("%3Cscript src='/js/foundation.min.js' type='text/javascript'%3E%3C/script%3E"))
 
 script(id="dsq-count-scr" src="//nitelite.disqus.com/count.js" async)
 
 // Plugins and custom javascript
-script(src='/js/libs.js')
-
-script(src='/js/main.js')
+//script(src='/js/libs.js')
+//
+//script(src='/js/main.js')
+script(src='/scripts/bundle.js')
 
