--- a/nitelite.io-web/templates/includes/header.jade
+++ b/nitelite.io-web/templates/includes/header.jade
@@ -26,7 +26,7 @@ head
     //script(src='/js/modernizr.min.js')
 
     | <!-- Stylesheets -->
-    link(rel='stylesheet', href='/scripts/main.css', type='text/css')
+    link(rel='stylesheet', href='/scripts/main.bundle.css', type='text/css')
     | <!--[if lt IE 10]>
     |   <link href="/css/ie9.css" media="screen, projection"
     |   rel="stylesheet" type="text/css" />
