--- a/nitelite.io-web/contents/sass/lib.scss
+++ b/nitelite.io-web/contents/sass/lib.scss
@@ -5,7 +5,7 @@
 @import "settings";
 
 @import "../../node_modules/foundation-sites/scss/normalize";
-//@import "../../node_modules/foundation-icons/foundation-icons";
+@import "../../node_modules/foundation-icons/foundation-icons";
 @import "../../node_modules/foundation-sites/scss/foundation";
 
 // Custom app overrides
