Get print.scss working!
- Make sure print.scss is working via a media query
- Update npm run scripts name to introduce namespacing tasks
- Remove old script embeds since webpack is now handling those

--- a/nitelite.io-web/templates/includes/scripts.jade
+++ b/nitelite.io-web/templates/includes/scripts.jade
@@ -1,15 +1,5 @@
-// jQuery CDN and fallback
-//script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
-
-//script(type='text/javascript').
-//  window.jQuery || document.write(unescape("%3Cscript src='/js/jquery.min.js' type='text/javascript'%3E%3C/script%3E"))
-
-// Foundation CDN and fallback
-//script(src="//cdn.jsdelivr.net/foundation/5.1.0/js/foundation.min.js")
-//
-//script(type='text/javascript').
-//  window.Foundation || document.write(unescape("%3Cscript src='/js/foundation.min.js' type='text/javascript'%3E%3C/script%3E"))
 
 script(id="dsq-count-scr" src="//nitelite.disqus.com/count.js" async)
 
 script(src='/scripts/main.bundle.js')
+script(src='/scripts/print.bundle.js')
