Get the docker container working!
- Just switch to using the root user since I'm only using it for development
- Update main skill tags to be music related and remove dashes from the presentation layer
- Include application.coffee in my app.coffe imports
- Update sass and webpack to use includePaths so that sass can compile successfully on docker containers
- docker containers will have node_modules installed externally to avoid conflicting with the bind mounted root project directory
  - thus, sass, webpack loaders, node modules, and webpack modules, must all be aware of the external node_modules paths
  - webpack.config.js, and all imports required, have been updated to get this working
  - the site should now build in both docker containers and outside of it (eg. a linux host just building locally)
- Updated npm scripts to have 2 primary types of tasks:
  - server + server-watch: runs the wintersmith preview server, and watch will update content without going through any major recompilation; use for editing content without rebuilding everything
  - start + start-watch: literally builds EVERYTHING- webpack, etc. - use for all other non-content source code
- Removed unused grunt tasks that have been replaced with npm scripts
- Disable isProd in webpack.config.js since it was interefering with npm run build, which I think I stopped using now

--- a/nitelite.io-web/contents/sass/_settings.scss
+++ b/nitelite.io-web/contents/sass/_settings.scss
@@ -3,7 +3,9 @@
 //
 
 // Uncomment to use rem-calc() in your settings
-@import "../../node_modules/foundation-sites/scss/foundation/functions";
+
+// imported from: node_modules/foundation-sites/scss/
+@import "foundation/functions";
 
 // $experimental: true;
 
